--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html {
+  color-scheme: light; 
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
